--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="./index2.html" id="branch2" target="_parent">Branch 2</a>
+                  <a class="nav-link" aria-current="page" href="./" id="branch2" target="_parent">Branch 2</a>
                 </li>
                 <button class="btn1" type="submit">Login</button>
                 <button class="btn2" type="submit">Register</button>
@@ -58,7 +58,7 @@
                 <img src="img/Mask.jpg" alt="">
             </div>
             <div class="text">
-                <h2 class="hero-title">Meaningful investments in <br> Main Street businesses</h2>
+                <h2 class="hero-title">Meaningful investments in Main Street businesses</h2>
                 <p class="hero-p">Browse vetted investment offerings in <br>communities all over the US.</p>
                 <a href="" class="btn3">Get Started</a>
             </div>
