--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="./index2.html" id="branch2" target="_parent">Branch 2</a>
+                  <a class="nav-link" aria-current="page" href="./index2.html" target="_self" id="brn2">Branch 2</a>
                 </li>
                 <button class="btn1" type="submit">Login</button>
                 <button class="btn2" type="submit">Register</button>
