--- a/index2.html
+++ b/index2.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Next Invest</title>
+    <title>Next Invest by Apon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/59531f5a28.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style2.css">
+    <link rel="shortcut icon" href="img/icon.png" type="icon/image">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-transparent mb-2 position-absolute fixed-top" id="nav">
@@ -44,7 +45,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="./index.html" id="branch1" target="_parent">Branch 1</a>
+                  <a class="nav-link" aria-current="page" href="./index3.html" target="_self" id="brn3">Branch 3</a>
                 </li>
                     <button class="btn rounded-0 btn1">Login</button>
                     <button class="btn rounded-0 btn2">Register</button>
@@ -968,6 +969,6 @@
         </div>
       </footer>
 
-      <script src="index.js"></script>
+      <script src="index2.js"></script>
 </body>
 </html>
